--- a/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Calendar.apk/res/values-fi-rFI/strings.xml
@@ -289,7 +289,7 @@
   <string name="global_football_final">FINAALI</string>
   <string name="global_football_no_match">Jatkapallo-otteluita ei ole suunniteltu tälle päivälle.</string>
   <string name="global_onthisday_com">OnThisDay.com</string>
-  <string name="guide_card_close">sulje</string>
+  <string name="guide_card_close">Sulje</string>
   <string name="guide_card_hint_text">Tuo syntymäpäivät yhteystiedoista</string>
   <string name="hint_attendees">Osallistujat</string>
   <string name="hint_description">Kuvaus</string>
@@ -628,7 +628,7 @@ Voit myös lisätä muistutuksia, jotta et menetä mitään tärkeää."</string
   <string name="taishen">胎神</string>
   <string name="talk_back_month">月</string>
   <string name="talk_back_read_date">%1$s (%2$s kuukalenterin mukaan)</string>
-  <string name="talk_back_setting">asetus</string>
+  <string name="talk_back_setting">Asetukset</string>
   <string name="template_announce_item_index">Tapahtuma %1$s / %2$s.</string>
   <string name="template_week_num">Viikko %1$s</string>
   <string name="text_day">日</string>
