--- a/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/framework-ext-res.apk/res/values-fi-rFI/strings.xml
@@ -85,6 +85,9 @@
   <string name="miui_screen_ratio_hint_message">Tämä sovellus voi käyttää kokonäyttötilaa, joka saattaa aiheuttaa sen virheellisen näyttämisen. Voit muuttaa tätä asetuksissa Asetukset &gt; Kokonäyttö.</string>
   <string name="miui_screen_ratio_hint_ok">OK</string>
   <string name="miui_upgrading_notification_title">Ladataan järjestelmää, jotkut ominaisuudet ei välttämättä ole käytettävissä.</string>
+  <string name="miui_warning_button_cancel">Peruuta</string>
+  <string name="miui_warning_button_ok">OK</string>
+  <string name="miui_warning_tip_info">Sovelluksessa %1$s tapahtui virhe. Suljetaanko tämä sovellus nyt?</string>
   <string name="onehour">30 minuuttia</string>
   <string name="package_delete_confirm_step_1">Poistetaanko %s?</string>
   <string name="package_delete_confirm_step_2">Tämän sovelluksen poistaminen saattaa aiheuttaa järjestelmässä epävakautta.</string>
